force-app/main/default/objects/WORKER__c/WORKER__c.object-meta.xml
<CustomObject>
    <label>ドライバー・作業員</label>
    <nameField>
        <displayFormat>WK-{000000}</displayFormat>
        <label>WORKER ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>