force-app/main/default/objects/WORKER__c/fields/BIRTHDAY__c.field-meta.xml
<CustomField>
    <fullName>BIRTHDAY__c</fullName>
    <label>BIRTHDAY</label>
    <type>Date</type>
</CustomField>