force-app/main/default/objects/WORKER__c/fields/CONTRACT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TYPE__c</fullName>
    <label>CONTRACT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time(Case By Case)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>