force-app/main/default/objects/WORKER__c/fields/EMERGENCY_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>EMERGENCY_CONTACT__c</fullName>
    <label>EMERGENCY CONTACT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>