force-app/main/default/objects/WORKER__c/fields/FULL_NAME__c.field-meta.xml
<CustomField>
    <fullName>FULL_NAME__c</fullName>
    <label>FULL NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>