force-app/main/default/objects/WORKER__c/fields/HOME_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>HOME_ADDRESS__c</fullName>
    <label>HOME ADDRESS</label>
    <type>TextArea</type>
</CustomField>