force-app/main/default/objects/WORKER__c/fields/MainFacility__c.field-meta.xml
<CustomField>
    <fullName>MainFacility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Facility__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>WORKER/DRIVER</relationshipLabel>
    <relationshipName>WorkerDriver</relationshipName>
    <type>Lookup</type>
</CustomField>