force-app/main/default/objects/WORKER__c/fields/PIT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PIT_NUMBER__c</fullName>
    <label>PIT NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>