force-app/main/default/objects/WORKER__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <formula>FULL_NAME__c &amp; &apos; - &apos; &amp; EMPLOYEE_ID__c</formula>
    <label>QR Display Summary</label>
    <type>Text</type>
</CustomField>