force-app/main/default/objects/WORKER__c/fields/UserAccount__c.field-meta.xml
<CustomField>
    <fullName>UserAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER ACCOUNT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WorkDriver</relationshipName>
    <type>Lookup</type>
</CustomField>