force-app/main/default/objects/WORKER__c/fields/WORK_TYPE__c.field-meta.xml
<CustomField>
    <fullName>WORK_TYPE__c</fullName>
    <label>WORK TYPE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FULL CONTAINER TRUCK DRIVER</fullName>
            </value>
            <value>
                <fullName>TRUCK DRIVER</fullName>
            </value>
            <value>
                <fullName>FORKLIFT DRIVER</fullName>
            </value>
            <value>
                <fullName>WAREHOUSE STAFF</fullName>
            </value>
            <value>
                <fullName>Warehouse Inbound Operator</fullName>
            </value>
            <value>
                <fullName>Warehouse Outbound Operator</fullName>
            </value>
            <value>
                <fullName>Vessel Crew</fullName>
            </value>
            <value>
                <fullName>Gate Operator</fullName>
            </value>
            <value>
                <fullName>Terminal Operator</fullName>
            </value>
            <value>
                <fullName>Port Operator</fullName>
            </value>
            <value>
                <fullName>ICD Operator</fullName>
            </value>
            <value>
                <fullName>Yard Operator</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>