force-app/main/default/objects/WORKER__c/fields/WorkerQRLabel__c.field-meta.xml
<CustomField>
    <fullName>WorkerQRLabel__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=100x100&amp;cht=qr&amp;chl=&apos; + Name , &apos;Create Qr Code for this item&apos; )</formula>
    <label>WORKER QR LABEL</label>
    <type>Text</type>
</CustomField>