force-app/main/default/objects/WORKER__c/recordTypes/VesselCrew.recordType-meta.xml
<RecordType>
    <fullName>VesselCrew</fullName>
    <active>true</active>
    <label>Vessel Crew</label>
</RecordType>