force-app/main/default/objects/WORKER__c/recordTypes/WarehouseWorker.recordType-meta.xml
<RecordType>
    <fullName>WarehouseWorker</fullName>
    <active>true</active>
    <label>Warehouse Worker</label>
</RecordType>