force-app/main/default/objects/WORKER__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EMPLOYEE_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>FULL_NAME__c</columns>
    <columns>WORK_TYPE__c</columns>
    <columns>DRIVER_LICENSE_NUMBER__c</columns>
    <columns>PHONE_NUMBER__c</columns>
    <columns>EMERGENCY_CONTACT__c</columns>
    <columns>LICENSE_ISSUED_DATE__c</columns>
    <columns>DATE_OF_EXPIRY__c</columns>
    <columns>MAIN_TRUCK_FLEET__c</columns>
    <columns>CLOFOR_APPLICATION_USAGE__c</columns>
    <columns>CLOFOR_LICENSE_TYPE__c</columns>
    <columns>AutomationDefault__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>